--- a/bws_menu/css/general_style_wp_before_3.8.css
+++ b/bws_menu/css/general_style_wp_before_3.8.css
@@ -216,11 +216,11 @@ a.bws_plugin_pro_version {
     font-size: 12px;
     opacity: 0.7;
 }
-div.bws_banner_on_plugin_page .button {
-    float: right;
+.bws_banner_on_plugin_page .button {
+    float: left;
     border: none; 
     font-size: 14px;
-    margin: 18px 16px;
+    margin: 18px 0 18px 16px;
     padding: 14px 29px;
     color: #FFF;
     text-shadow: none;
@@ -243,15 +243,9 @@ div.bws_banner_on_plugin_page .button {
     background: #222;
     color: #FFF;
 }
-div.bws_banner_on_plugin_page .icon {
-    float: left;
-    margin: 12px 8px 8px 12px;
-}
-.bws_banner_on_plugin_page .icon img {
-    max-width: 60px;
-}
-.bws_banner_on_plugin_page .text + .icon {
-    display: none;
+.bws_banner_on_plugin_page .icon {
+    float: right;
+    margin: 12px 8px 8px 0;
 }
 .bws_banner_on_plugin_page .close_icon {
     float: right;
@@ -266,9 +260,5 @@ div.bws_banner_on_plugin_page .icon {
     .bws_banner_on_plugin_page .button {
         float: none;
         text-align: center;
-    }
-    .bws_banner_on_plugin_page .icon {
-        position: relative;
-        left: 8px;
     }
 }
