--- a/css/style.css
+++ b/css/style.css
@@ -26,28 +26,24 @@
 * styles for manager page
 */
 .cntctfrmtdb-help-pages {
-	position: absolute;
-	top: -1px;
-	right: 20px;
+	float: right;
 }
 .cntctfrmtdb-help-pages a {
 	display: block;
 	float: left;
 	margin-left: 6px;
 	font-size: 12px;
-	height: 22px;
-	line-height: 22px;
+	height: 28px;
+	line-height: 28px;
 	padding: 1px 16px 0 6px;
 	text-decoration: none;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
 	z-index: 1;
-	color: #B7B7B7;
-	border-bottom-left-radius: 3px;
-	border-bottom-right-radius: 3px;
-	background: linear-gradient(to top, #DFDFDF, #F1F1F1) repeat scroll 0 0 #E3E3E3;
-	border-bottom: 1px solid #CCCCCC;
-	border-left: 1px solid #CCCCCC;
-	border-right: 1px solid #CCCCCC;
+	color: #777;
+	background: #FFF;
+	border-bottom: 1px solid #DDD;
+	border-left: 1px solid #DDD;
+	border-right: 1px solid #DDD;
 }
 .cntctfrmtdb-help-pages .user-guide-icon,
 .cntctfrmtdb-help-pages .faq-icon {
@@ -231,7 +227,7 @@
 .cntctfrmtdb .wp-list-table .column-message strong {
 	color: #333;
 }
-.cntctfrmtdb .cntctfrmtdb-attachment-column-title {
+.cntctfrmtdb-attachment-column-title {
 	display: inline-block;
 	width: 11px;
 	height: 16px;
@@ -255,7 +251,7 @@
 	background: url('../images/status-icons.png') -22px 0px;
 }
 .cntctfrmtdb .wp-list-table .column-sent {
-	width: 70px;
+	min-width: 70px;
 	padding: 4px 0 2px 0;
 	vertical-align: top;
 	text-align: center;
@@ -285,11 +281,12 @@
 	background: url('../images/status-icons.png') -33px 0px;
 }
 .cntctfrmtdb .wp-list-table .column-date {
-	vertical-align: top;
 	text-align: center;
+	min-width: 70px;
 }
-.cntctfrmtdb .wp-list-table .column-date span {
-	display: block;
+.cntctfrmtdb .wp-list-table .column-department {
+	min-width: 100px;
+	max-width: 150px;
 }
 @media only screen and (max-width: 700px) {
 	.cntctfrmtdb .wp-list-table .check-column input {
