--- a/bws_menu/css/general_style.css
+++ b/bws_menu/css/general_style.css
@@ -81,6 +81,9 @@ td.bws_pro_version_tooltip {
     position: absolute;
     z-index: 1;
 }
+.bws_hide_premium_options {
+    z-index: 5;
+}
 .bws_pro_version_table_bloc table.bws_pro_version { 
     background: transparent;
     margin: 0;
@@ -252,6 +255,14 @@ div.bws_banner_on_plugin_page .icon {
     margin: 8px;
     cursor: pointer;
 }
+.rtl .bws_banner_on_plugin_page .close_icon {
+    float: left;
+}
+.rtl div.bws_banner_on_plugin_page .icon,
+.rtl div.bws_banner_on_plugin_page .button,
+.rtl .bws_banner_on_plugin_page .text {
+    float: right;
+}
 /* #### Mobile Phones Portrait or Landscape #### */
 @media screen and (max-device-width: 768px) {
     .bws_banner_on_plugin_page .text,
@@ -285,7 +296,9 @@ span.bws_code {
     position: relative;
     margin: 3px 5px;
     width: 28px;
-    display: inline-block;
+    display: inline-block;    
+}
+.bws_help_box:not(.dashicons) {
     vertical-align: middle;
 }
 .bws_help_box.dashicons-editor-help {
@@ -299,9 +312,8 @@ span.bws_code {
     color: #2ea2cc;
 }
 .bws_hidden_help_text {
-    background: #F4F4F4;
+    background: #fff;
     border: 1px solid #DCDCDC;
-    border-radius: 4px;
     left: 40px;
     padding: 5px;
     position: absolute;
@@ -310,17 +322,43 @@ span.bws_code {
     display: none;
     color: #333;
     font-size: 12px;
+    font-family: "Open Sans",sans-serif;
+    text-align: left;
 }
 .dashicons-editor-help .bws_hidden_help_text {
     left: 30px;
     top: -6px;
 }
+.bws_hidden_help_text:after,
 .bws_hidden_help_text:before {
-    content: url("../images/help.png");
-    left: -10px;
     position: absolute;
+    content: "";
+    width: 0;
+    height: 0;
+    left: -10px;
     top: 7px;
     direction: ltr;
+}
+.bws_hidden_help_text:before {
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    border-right: 11px solid #DCDCDC;
+    z-index: -1;
+    margin-top: -1px;
+    margin-left: -2px;
+}
+.bws_hidden_help_text:after {
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    border-right: 10px solid #fff;
+}
+.bws_hidden_help_text:after {
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    border-right: 10px solid #fff;
+}
+.bws_hidden_help_text code {
+    padding: 2px 5px 1px;
 }
 .bws_help_box:hover .bws_hidden_help_text {
     display: inline-block;
@@ -335,11 +373,11 @@ span.bws_code {
 .bws_help_box_right.dashicons-editor-help .bws_hidden_help_text,
 .rtl .dashicons-editor-help .bws_hidden_help_text {
     right: 30px;
-    top: 0;
 }
 .bws_help_box_right .bws_hidden_help_text:before,
-.rtl .bws_hidden_help_text:before {
-    top: 0;
+.rtl .bws_hidden_help_text:before,
+.rtl .bws_hidden_help_text:after,
+.bws_help_box_right .bws_hidden_help_text:after {
     left: auto;
     right: -10px;
     -webkit-transform: rotate(180deg); /* Chrome y Safari */
@@ -347,11 +385,22 @@ span.bws_code {
     -o-transform: rotate(180deg); /* Opera */
     transform: rotate(180deg);
 }
+.rtl .bws_hidden_help_text {
+    text-align: right;
+}
+.bws_help_box_right .bws_hidden_help_text:before,
+.rtl .bws_hidden_help_text:before {
+    margin-right: -2px;
+}
+
 
 /* bws shortcode insert */
 #bws_shortcode_content,
 #bws_shortcode_select_plugin {
     margin-bottom: 10px;
+}
+#bws_shortcode_content * {
+    white-space: normal;
 }
 #bws_shortcode_popup_block h4 {
     padding: 0;
