--- a/css/style.css
+++ b/css/style.css
@@ -7,41 +7,6 @@
 .cntctfrmtdb th#message {
 	display: table-cell !important;
 }
-.cntctfrmtdb-help-pages {
-	float: right;
-}
-.cntctfrmtdb-help-pages a {
-	display: block;
-	float: left;
-	margin-left: 6px;
-	font-size: 12px;
-	height: 28px;
-	line-height: 28px;
-	padding: 1px 16px 0 6px;
-	text-decoration: none;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
-	z-index: 1;
-	color: #777;
-	background: #FFF;
-	border-bottom: 1px solid #DDD;
-	border-left: 1px solid #DDD;
-	border-right: 1px solid #DDD;
-}
-.cntctfrmtdb-help-pages .user-guide-icon {
-	position: relative;
-	top: 3px;
-	margin-right: 7px; 
-	display: inline-block;
-	width: 14px;
-	height: 14px;
-}
-.cntctfrmtdb-help-pages .user-guide-icon {
-	background: url('../images/status-icons.png') -14px -76px;
-}
-.cntctfrmtdb-help-pages a:hover {
-	background-color: transparent;
-	color: #B7B7B7;
-}
 .cntctfrmtdb-preloader {
 	position: absolute;
 	width: 32px;
@@ -73,7 +38,8 @@
 	width: 16px;
 	height: 12px;
 	background: url('../images/status-icons.png') 0px -16px;
-	text-indent: 9999px;
+	display: inline-block;
+	color: transparent;
 }
 .cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-letter:hover {
 	background: url('../images/status-icons.png') -16px -16px;
@@ -83,6 +49,7 @@
 	height: 16px;
 	background: url('../images/status-icons.png') 0px -28px;
 	text-indent: 9999px;
+	display: inline-block;
 }
 .cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-spam:hover {
 	background: url('../images/status-icons.png') -16px -28px;
@@ -92,6 +59,7 @@
 	height: 16px;
 	background: url('../images/status-icons.png') 0 -44px;
 	text-indent: 9999px;
+	display: inline-block;
 }
 .cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-trash:hover {
 	background: url('../images/status-icons.png') -14px -44px;
@@ -101,6 +69,7 @@
 	height: 16px;
 	background: url('../images/status-icons.png') 0 -60px;
 	text-indent: 9999px;
+	display: inline-block;
 }
 .cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-unknown:hover {
 	background: url('../images/status-icons.png') -16px -60px;
