--- a/bws_menu/css/general_style.css
+++ b/bws_menu/css/general_style.css
@@ -56,6 +56,7 @@
 }
 div.bws_info {
     margin-top: 7px;
+    word-break: break-all;
 }
 .bws_info_small {
     font-size: 11px !important;
@@ -87,22 +88,24 @@ div.updated.bws-notice {
 .bws-plugin-reviews-rate,
 .bws-plugin-reviews-support,
 .bws-plugin-reviews-donate {
-    display: inline-block;
     padding: 10px;
-    width: 30%;
+    display: block;
+}
+
+@media screen and (min-width: 1600px) {
+    .bws-plugin-reviews-rate,
+    .bws-plugin-reviews-support,
+    .bws-plugin-reviews-donate {
+        display: inline-block;        
+        width: 30%;
+    }
 }
 @media screen and (max-width: 1600px) {
     .bws-plugin-reviews-rate,
     .bws-plugin-reviews-support {
         border-bottom: 1px solid #70A8C2;
         border-right: none;
-    }
-    .bws-plugin-reviews-rate,
-    .bws-plugin-reviews-support,
-    .bws-plugin-reviews-donate {
-        width: initial;
-        display: block;
-    }
+    }    
 }
 /*
 * styles for Go PRO tab
@@ -240,7 +243,8 @@ a.bws_plugin_pro_version {
     .bws_pro_version_tooltip .bws_info a {
         display: block;
     }
-    .bws_pro_version_tooltip .bws_button {
+    .bws_pro_version_tooltip .bws_button,
+    .bws_pro_version_tooltip .bws_button:hover {
         margin: 10px 10px 5px;
         float: none;
     }
@@ -465,9 +469,7 @@ span.bws_code {
     text-shadow: 0 0 2px #000;
     padding: 4px 8px;
     border: 1px solid rgba(255,255,255,0.25);
-    background-color: rgb(25,25,25);
-    background-color: rgba(25,25,25,0.92);
-    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(transparent), to(#000));
+    background: rgba(25,25,25,0.92);
     border-radius: 3px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -646,7 +648,8 @@ span.bws_code {
 #bws_settings_tabs li.bws-tab-import-export a:before {
     content: "\f317";
 }
-#bws_settings_tabs li.bws-tab-errors a:before {
+#bws_settings_tabs li.bws-tab-errors a:before,
+#bws_settings_tabs li.bws-tab-messages a:before {
     font-family: 'bwsicons';
     content: "\e93d";
     font-size: 18px;
