--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,6 @@
 .cntctfrmtdb .wp-list-table .manage-column {
 	vertical-align: middle!important;
 }
-.cntctfrmtdb .wp-list-table .column-status div {
-	cursor: pointer;
-}
 .cntctfrmtdb .wp-list-table .not-sent-message {
 	background: #ffebe8;
 }
@@ -30,46 +27,8 @@
 .cntctfrmtdb .wp-list-table .not-sent-message td {
 	border-top-color: #ffebe8;
 }
-.cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-letter {
-	margin-top: 3px;
-	width: 16px;
-	height: 12px;
-	background: url('../images/status-icons.png') 0px -16px;
-	display: inline-block;
-	color: transparent;
-}
-.cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-letter:hover {
-	background: url('../images/status-icons.png') -16px -16px;
-}
-.cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-spam {
-	width: 16px;
-	height: 16px;
-	background: url('../images/status-icons.png') 0px -28px;
-	color: transparent;
-	display: inline-block;
-}
-.cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-spam:hover {
-	background: url('../images/status-icons.png') -16px -28px;
-}
-.cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-trash {
-	width: 14px;
-	height: 16px;
-	background: url('../images/status-icons.png') 0 -44px;
-	color: transparent;
-	display: inline-block;
-}
-.cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-trash:hover {
-	background: url('../images/status-icons.png') -14px -44px;
-}
-.cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-unknown {
-	width: 16px;
-	height: 16px;
-	background: url('../images/status-icons.png') 0 -60px;
-	color: transparent;
-	display: inline-block;
-}
-.cntctfrmtdb .wp-list-table .column-status .cntctfrmtdb-unknown:hover {
-	background: url('../images/status-icons.png') -16px -60px;
+.cntctfrmtdb .wp-list-table .column-from {
+	width: 200px;
 }
 .cntctfrmtdb .wp-list-table .column-from .from-name {
 	display: block;
@@ -83,29 +42,29 @@
 .cntctfrmtdb .wp-list-table .column-from .not-read-message {
 	font-weight: bold;
 }
+.cntctfrmtdb .wp-list-table .column-message {
+	width: 600px;
+}
 .cntctfrmtdb .wp-list-table .column-message .message-container {
 	position: relative;
 	padding-bottom: 2px;
 	overflow: hidden;
 	color: #333;
 }
-.cntctfrmtdb .wp-list-table .column-message .message-container .attachments-preview {
-	margin-top: 5px;
-	border-top: 1px solid #999;
-}
-.cntctfrmtdb .wp-list-table .column-message .message-container .attachments-preview tr {
+.cntctfrmtdb-attachments-preview tr {
 	float: left;
 	margin-right: 3px;
 	margin-top: 3px
 }
-.cntctfrmtdb .wp-list-table .column-message .message-container .attachments-preview .attachment-img {
+.cntctfrmtdb-attachments-preview .cntctfrmtdb-attachment-img {
+	margin-top: 5px;
 	display: block;
 	border: 1px solid #999;
 	-webkit-border-radius: 5px ;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 }
-.cntctfrmtdb .wp-list-table .column-message .message-container .attachments-preview .attachment-img img {
+.cntctfrmtdb-attachments-preview .cntctfrmtdb-attachment-img img {
 	max-width: 150px;
 	max-height: 150px;
 	border: 2px solid #fff;
@@ -116,14 +75,14 @@
 	-moz-box-shadow: 1px 1px 5px rgba( 0, 0, 0, 0.8 );
 	box-shadow: 1px 1px 5px rgba( 0, 0, 0, 0.8 );
 }
-.cntctfrmtdb .wp-list-table .column-message .message-container .attachments-preview td {
+.cntctfrmtdb-attachments-preview td {
 	vertical-align: middle!important;
 	border: none;
 }
-.cntctfrmtdb .wp-list-table .column-message .message-container .attachments-preview .attachment-info a {
+.cntctfrmtdb-attachments-preview .cntctfrmtdb-attachment-info a {
 	 visibility: hidden;
 }
-.cntctfrmtdb .wp-list-table .column-message .message-container .attachments-preview .attachment-info:hover a {
+.cntctfrmtdb-attachments-preview .cntctfrmtdb-attachment-info:hover a {
 	 visibility: visible;
 }
 .cntctfrmtdb .wp-list-table .column-message strong {
@@ -134,22 +93,11 @@
 	width: 11px;
 	height: 16px;
 	margin-top: 3px;
-	background: url('../images/status-icons.png') 0px 0px;
-}
-.cntctfrmtdb .wp-list-table .column-attachment .has-attachment {
-	width: 11px;
-	height: 16px;
-	margin-top: 15px;
-	background: url('../images/status-icons.png') -11px 0px;
-}
-.cntctfrmtdb .wp-list-table .column-attachment .warning-attachment {
-	width: 11px;
-	height: 16px;
-	margin-top: 15px;
-	background: url('../images/status-icons.png') -22px 0px;
+	background: url('../images/status-icons.png') 0 0;
 }
 .cntctfrmtdb .wp-list-table .column-sent .counter {
 	display: block;
+	float: left;
 	width: 34px;
 	height: 19px;
 	padding-top: 1px;
@@ -165,9 +113,8 @@
 	float: left;
 	width: 6px;
 	height: 14px;
-	margin-top: 15px;
-	margin-left: 6px;
-	background: url('../images/status-icons.png') -33px 0px;
+	margin: 4px 6px 0 6px;
+	background: url('../images/status-icons.png') -33px 0;
 }
 .cntctfrmtdb .tablenav option[value="re_send_messages"],
 .cntctfrmtdb .tablenav option[value="download_attachments"] {
@@ -177,7 +124,7 @@
 	display: inline-block;
 	width: 11px;
 	height: 16px;
-	background: url('../images/status-icons.png') -11px 0px;
+	background: url('../images/status-icons.png') -11px 0;
 }
 .cntctfrmtdb_how_to_use {
 	float: right;
@@ -197,6 +144,11 @@ table a.bws_plugin_menu_pro_version:hover {
 	background: transparent;
 	color: #666666;
 }
+.cntctfrmtdb-message-text,
+.cntctfrmtdb-custom-field-text {
+	word-break: break-word;
+}
+
 @media screen and (max-width: 782px) {
 	.cntctfrmtdb_how_to_use {
 		float: none;
